Revert "fixes text wrapping in benefits blocks"
This reverts commit decae9078c02a7a1e203b4fe9cf841412b2fe1d0.

--- a/wp-content/themes/classy/sass/pages/powetrains.scss
+++ b/wp-content/themes/classy/sass/pages/powetrains.scss
@@ -386,7 +386,7 @@
         .benefit {
 
           &__content {
-            padding: 50px 30px;
+            padding: 50px 15px;
           }
 
           &__text {
